fix voting on mobile (style tweaks)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,9 +25,11 @@ div.subphez-heading-well {
 
 div.voting_arrows {
   margin-top: .5em;
-  width: 2%;
   float: left;
   min-width: 30px;
+  width: 30px;
+  padding-left: 5px;
+  margin-right: 5px;
 }
 span.vote_count {
   font-size: 1.3em;
@@ -36,7 +38,7 @@ span.vote_count {
 }
 div.thumbnail {
   float: left;
-  width: 120px;
+  width: 90px;
   margin-right: 20px;
   display: block;
 }
@@ -48,16 +50,18 @@ div.thumbnail {
   color: #0066ff !important;
 }
 .post-title {
-  float: left;
-  display: block;
   max-width: 500px;
+}
+br.post-title-spacer {
+  display: block;
+  margin: 5px 0;
+}
+a.post-link {
+  font-size: 1.6em;
 }
 .domain {
   color: #b2b2b2;
-  float: left !important;
   font-size: .9em;
-  margin-top: 28px;
-  margin-left: 10px;
 }
 .domain a, .domain a:visited {
   color: #b2b2b2;
